Web tarafında Ana Sayfa tasarımı bitti.

--- a/Frontend/YemekWebUI/Views/Shared/Components/_HeadUILayoutComponentPartial/Default.cshtml
+++ b/Frontend/YemekWebUI/Views/Shared/Components/_HeadUILayoutComponentPartial/Default.cshtml
@@ -1,9 +1,17 @@
 ﻿<head>
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
-    <title>Tasty Recipes</title>
+    <title>Muhteşem Yemek Tarifleri</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+
+    <style>
+        .KendimAyarladim img {
+    width: 100%; /* Konteynerin genişliğine uyacak şekilde */
+    height: 200px; /* Sabit bir yükseklik */
+    object-fit: cover; /* Görüntüyü kırparak sığdırır */
+    border-radius: 8px; /* Köşeleri yuvarlamak isterseniz */
+}</style>
 
     <!-- <link rel="manifest" href="site.webmanifest"> -->
     <!-- Place favicon.ico in the root directory -->
