--- a/Frontend/YemekWebUI/Views/Shared/Components/_FooterUILayoutComponentPartial/Default.cshtml
+++ b/Frontend/YemekWebUI/Views/Shared/Components/_FooterUILayoutComponentPartial/Default.cshtml
@@ -19,13 +19,13 @@
                 <div class="col-xl-2 col-md-6 col-lg-2">
                     <div class="footer_widget">
                         <h3 class="footer_title">
-                            Quick Links
+                            Hızlı Linkler
                         </h3>
                         <ul>
-                            <li><a href="#">Jobs</a></li>
-                            <li><a href="#">Brand Assets</a></li>
-                            <li><a href="#">Investor Relations</a></li>
-                            <li><a href="#">Terms of Service</a></li>
+                            <li><a href="#">İnstagram</a></li>
+                            <li><a href="#">Linkedin</a></li>
+                            <li><a href="#">Youtube</a></li>
+                            <li><a href="#">Twitter</a></li>
                         </ul>
 
                     </div>
@@ -33,13 +33,12 @@
                 <div class="col-xl-2 col-md-6 col-lg-2">
                     <div class="footer_widget">
                         <h3 class="footer_title">
-                            Features
+                            Hizmetler
                         </h3>
                         <ul>
-                            <li><a href="#">Jobs</a></li>
-                            <li><a href="#">Brand Assets</a></li>
-                            <li><a href="#">Investor Relations</a></li>
-                            <li><a href="#">Terms of Service</a></li>
+                            <li><a href="#">Tarif Ekle</a></li>
+                            <li><a href="#">Tarifleri Gör</a></li>
+
                         </ul>
 
                     </div>
@@ -100,7 +99,7 @@
                             </li>
                             <li>
                                 <a href="#">
-                                    <i class="fa fa-dribbble"></i>
+                                    <i class="fa fa-youtube"></i>
                                 </a>
                             </li>
                             <li>
