--- a/Frontend/YemekWebUI/Views/Shared/Components/_HeaderUILayoutComponentPartial/Default.cshtml
+++ b/Frontend/YemekWebUI/Views/Shared/Components/_HeaderUILayoutComponentPartial/Default.cshtml
@@ -14,24 +14,24 @@
                         <div class="main-menu   d-none d-lg-block">
                             <nav>
                                 <ul id="navigation">
-                                    <li><a href="index.html">home</a></li>
-                                    <li><a href="about.html">about</a></li>
-                                    <li><a href="Recipes.html">Recipes</a></li>
-                                    <li>
+                                    <li><a href="index.html">Ana Sayfa</a></li>
+                                    <li><a href="about.html">Hakkımızda</a></li>
+                                    <li><a href="Recipes.html">Tarifler</a></li>
+                                    @* <li>
                                         <a href="#">blog <i class="ti-angle-down"></i></a>
                                         <ul class="submenu">
                                             <li><a href="blog.html">blog</a></li>
                                             <li><a href="single-blog.html">single-blog</a></li>
                                         </ul>
-                                    </li>
-                                    <li>
+                                    </li> *@
+                                    @* <li>
                                         <a href="#">pages <i class="ti-angle-down"></i></a>
                                         <ul class="submenu">
                                             <li><a href="recipes_details.html">Recipes Details</a></li>
                                             <li><a href="elements.html">elements</a></li>
                                         </ul>
-                                    </li>
-                                    <li><a href="contact.html">Contact</a></li>
+                                    </li> *@
+                                    <li><a href="contact.html">İletişim</a></li>
                                 </ul>
                             </nav>
                         </div>
