--- a/Frontend/YemekWebUI/Views/Shared/Components/_SliderUILayoutComponentPartial/Default.cshtml
+++ b/Frontend/YemekWebUI/Views/Shared/Components/_SliderUILayoutComponentPartial/Default.cshtml
@@ -6,7 +6,7 @@
                     <div class="slider_text text-center">
                         <div class="text">
                             <h3>
-                                Chicken dish with per boiled egg
+                                Muhteşem Yemek Tarifleri
                             </h3>
                         </div>
                     </div>
