--- a/Frontend/YemekWebUI/Views/_ViewImports.cshtml
+++ b/Frontend/YemekWebUI/Views/_ViewImports.cshtml
@@ -1,3 +1,4 @@
 ﻿@using YemekWebUI
 @using YemekWebUI.Models
+@using YemekUygulamasıDto.RecipeDtos
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
