Web tarafında Hakkımızda sayfası tasarımı bitti.

--- a/Frontend/YemekWebUI/Views/Home/Index.cshtml
+++ b/Frontend/YemekWebUI/Views/Home/Index.cshtml
@@ -9,5 +9,5 @@
 
 @await Component.InvokeAsync("_RecipeServiceComponentPartial");
 
-@await Component.InvokeAsync("_DiscoverRecipesComponentPartial");
+@* @await Component.InvokeAsync("_DiscoverRecipesComponentPartial"); *@
 
