--- a/Frontend/YemekWebUI/Views/UILayout/Index.cshtml
+++ b/Frontend/YemekWebUI/Views/UILayout/Index.cshtml
@@ -18,6 +18,8 @@
 
     @RenderBody()
 
+    @await Component.InvokeAsync("_DiscoverRecipesComponentPartial");
+
     <!-- footer  -->
     @await Component.InvokeAsync("_FooterUILayoutComponentPartial");
     <!--/ footer  -->
