--- a/Frontend/YemekWebUI/Views/_ViewImports.cshtml
+++ b/Frontend/YemekWebUI/Views/_ViewImports.cshtml
@@ -1,4 +1,5 @@
 ﻿@using YemekWebUI
 @using YemekWebUI.Models
 @using YemekUygulamasıDto.RecipeDtos
+@using YemekUygulamasıDto.AboutDtos
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
