Tüm tarifler sayfası bitti. filtreleme eklemedim henüz.

--- a/Frontend/YemekWebUI/Views/Shared/Components/_HeaderUILayoutComponentPartial/Default.cshtml
+++ b/Frontend/YemekWebUI/Views/Shared/Components/_HeaderUILayoutComponentPartial/Default.cshtml
@@ -14,9 +14,9 @@
                         <div class="main-menu   d-none d-lg-block">
                             <nav>
                                 <ul id="navigation">
-                                    <li><a href="index.html">Ana Sayfa</a></li>
-                                    <li><a href="about.html">Hakkımızda</a></li>
-                                    <li><a href="Recipes.html">Tarifler</a></li>
+                                    <li><a href="/Home/Index/">Ana Sayfa</a></li>
+                                    <li><a href="/About/Index/">Hakkımızda</a></li>
+                                    <li><a href="/Recipe/Index/">Tarifler</a></li>
                                     @* <li>
                                         <a href="#">blog <i class="ti-angle-down"></i></a>
                                         <ul class="submenu">
