JWT Token eklendi.

--- a/Frontend/YemekWebUI/Views/_ViewImports.cshtml
+++ b/Frontend/YemekWebUI/Views/_ViewImports.cshtml
@@ -2,4 +2,8 @@
 @using YemekWebUI.Models
 @using YemekUygulamasıDto.RecipeDtos
 @using YemekUygulamasıDto.AboutDtos
+@using YemekUygulamasıDto.CategoryDtos
+@using YemekUygulamasıDto.MaterialDtos
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
+@* custom bir taghelper yazınca buraya eklemem lazım yukarıdaki gibi.
+ *@
