--- a/Frontend/YemekWebUI/Views/_ViewImports.cshtml
+++ b/Frontend/YemekWebUI/Views/_ViewImports.cshtml
@@ -4,6 +4,8 @@
 @using YemekUygulamasıDto.AboutDtos
 @using YemekUygulamasıDto.CategoryDtos
 @using YemekUygulamasıDto.MaterialDtos
+@using YemekUygulamasıDto.LoginDtos
+@using YemekUygulamasıDto.RegisterDtos
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
 @* custom bir taghelper yazınca buraya eklemem lazım yukarıdaki gibi.
  *@
