Profil Kısmınına Kendi tarfilerim ve beğendiğim tarifler geliyor.

--- a/Frontend/YemekWebUI/Views/Shared/Components/_HeaderUILayoutComponentPartial/Default.cshtml
+++ b/Frontend/YemekWebUI/Views/Shared/Components/_HeaderUILayoutComponentPartial/Default.cshtml
@@ -17,6 +17,7 @@
                                     <li><a href="/Home/Index/">Ana Sayfa</a></li>
                                     <li><a href="/About/Index/">Hakkımızda</a></li>
                                     <li><a href="/Recipe/Index/">Tarifler</a></li>
+                                    <li><a href="/Profile/Index/">Profilim</a></li>
                                     @* tag helper kullanarak yazabilirsin bu yönlendirme işlemlerini. *@
                                     @* <li>
                                         <a href="#">blog <i class="ti-angle-down"></i></a>
