--- a/Frontend/YemekWebUI/Views/_ViewImports.cshtml
+++ b/Frontend/YemekWebUI/Views/_ViewImports.cshtml
@@ -6,6 +6,7 @@
 @using YemekUygulamasıDto.MaterialDtos
 @using YemekUygulamasıDto.LoginDtos
 @using YemekUygulamasıDto.RegisterDtos
+@using YemekUygulamasıDto.UserDtos
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
 @* custom bir taghelper yazınca buraya eklemem lazım yukarıdaki gibi.
  *@
