--- a/Frontend/YemekWebUI/Views/Shared/Components/_DiscoverRecipesComponentPartial/Default.cshtml
+++ b/Frontend/YemekWebUI/Views/Shared/Components/_DiscoverRecipesComponentPartial/Default.cshtml
@@ -5,7 +5,7 @@
                 <div class="trand_info text-center">
                     <p>Yüzlerce Tarif Seni Bekliyor</p>
                     <h3>En Güzel Tarifleri Keşfet</h3>
-                    <a href="#" class="boxed-btn3">Tüm Tarifleri Gör</a>
+                    <a href=@Url.Action("Index", "Recipe") class="boxed-btn3">Tüm Tarifleri Gör</a>
                 </div>
             </div>
         </div>
