--- a/Frontend/YemekWebUI/Views/Recipe/AddRecipe.cshtml
+++ b/Frontend/YemekWebUI/Views/Recipe/AddRecipe.cshtml
@@ -4,5 +4,7 @@
     Layout = "~/Views/UILayout/Index.cshtml";
 }
 
-@await Component.InvokeAsync("_AddRecipeComponentPartial");
+@* @await Component.InvokeAsync("_AddRecipeComponentPartial", new { id = Convert.ToInt32(ViewBag.userId) });
+ *@
+@await Component.InvokeAsync("_AddRecipeComponentPartial", new { id = Convert.ToInt32(ViewBag.userId) });
 
