--- a/Frontend/YemekWebUI/Views/Shared/Components/_AddRecipeGetCategoryComponentPartial/Default.cshtml
+++ b/Frontend/YemekWebUI/Views/Shared/Components/_AddRecipeGetCategoryComponentPartial/Default.cshtml
@@ -1,13 +1,10 @@
 ﻿@model List<ResultAllCategoryDto>
 <div class="input-group-icon mt-10">
-    <div class="icon"></i></div>
-    <div class="form-select" id="default-select" ">
-        <select>
-    @foreach (var item in Model)
-    {
-                <option value="@item.CategoryId">@item.Name</option>
-
-    }
-        </select>
-    </div>
+    <label for="category">Select Category</label>
+    <select class="form-select" id="category" name="CategoryId">
+        @foreach (var item in Model)
+        {
+            <option value="@item.CategoryId">@item.Name</option>
+        }
+    </select>
 </div>
