--- a/Frontend/YemekWebUI/Areas/Admin/Views/Recipe/Index.cshtml
+++ b/Frontend/YemekWebUI/Areas/Admin/Views/Recipe/Index.cshtml
@@ -1,8 +1,64 @@
-﻿
+﻿@model List<ResultAllRecipeForAdminDto>
 @{
     ViewData["Title"] = "Index";
     Layout = "~/Areas/Admin/Views/AdminLayout/Index.cshtml";
 }
 
-<h1>deneme</h1>
 
+<div class="row">
+    <div class="col-md-12">
+        <div class="card">
+            <div class="card-header">
+                <h4 class="card-title">Tarifler</h4>
+            </div>
+            <div class="card-body">
+                <div class="table-responsive">
+                    <table id="basic-datatables"
+                           class="display table table-striped table-hover">
+                        <thead>
+                            <tr>
+                                <th>RecipeId</th>
+                                <th>RecipeImage</th>
+                                <th>Title</th>
+                                <th>Description</th>
+                                <th>CategoryName</th>
+                                <th>UserName</th>
+                            </tr>
+                        </thead>
+                        <tfoot>
+                            <tr>
+                                <th>RecipeId</th>
+                                <th>RecipeImage</th>
+                                <th>Title</th>
+                                <th>Description</th>
+                                <th>CategoryName</th>
+                                <th>UserName</th>
+                            </tr>
+                        </tfoot>
+                        <tbody>
+                            @foreach (var item in Model)
+                            {
+                                <tr>
+                                    <td>@item.RecipeId</td>
+                                    <td>
+                                        <img src="@item.RecipeImageUrl" class="img-thumbnail" style="width: 100px; height: 100px; object-fit: cover;" />
+                                </td>
+                                    <td>@item.Title</td>
+                                    <td>@item.Description</td>
+                                    <td>@item.CategoryName</td>
+                                    <td>@item.Username</td>
+                                    <td>
+                                        <button class="btn btn-danger delete-button" data-url="/Admin/Recipe/RemoveRecipe/@item.RecipeId">
+                                            Sil
+                                        </button>
+                                    </td>
+
+                                </tr>
+                            }
+                        </tbody>
+                    </table>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
