Register ve login sayfa tasarımları değişti

--- a/Frontend/YemekWebUI/Areas/Admin/Views/Shared/Components/_AdminSideBarComponentPartial/Default.cshtml
+++ b/Frontend/YemekWebUI/Areas/Admin/Views/Shared/Components/_AdminSideBarComponentPartial/Default.cshtml
@@ -43,12 +43,12 @@
                         <div class="collapse" id="base">
                             <ul class="nav nav-collapse">
                                 <li>
-                                    <a href="components/avatars.html">
+                                    <a href="/Admin/User/Index">
                                         <span class="sub-item">Kullanıcı İşlemleri</span>
                                     </a>
                                 </li>
                                 <li>
-                                    <a href="components/buttons.html">
+                                    <a href="/Admin/About/Index">
                                         <span class="sub-item">Hakkımızda Kısmı</span>
                                     </a>
                                 </li>
