--- a/Frontend/YemekWebUI/Areas/Admin/Views/_ViewImports.cshtml
+++ b/Frontend/YemekWebUI/Areas/Admin/Views/_ViewImports.cshtml
@@ -3,6 +3,7 @@
 @using YemekUygulamasıDto.RecipeDtos
 @using YemekUygulamasıDto.UserDtos
 @using YemekUygulamasıDto.CategoryDtos
+@using YemekUygulamasıDto.AboutDtos
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
 @* custom bir taghelper yazınca buraya eklemem lazım yukarıdaki gibi.
  *@
