--- a/Frontend/YemekWebUI/Areas/Admin/Views/About/Index.cshtml
+++ b/Frontend/YemekWebUI/Areas/Admin/Views/About/Index.cshtml
@@ -1,15 +1,16 @@
-﻿@model List<ResultAllRecipeForAdminDto>
+﻿@model List<ResultAboutForAdminDto>
 @{
     ViewData["Title"] = "Index";
     Layout = "~/Areas/Admin/Views/AdminLayout/Index.cshtml";
 }
 
 
+
 <div class="row">
     <div class="col-md-12">
         <div class="card">
             <div class="card-header">
-                <h4 class="card-title">Tarifler</h4>
+                <h4 class="card-title">Hakkımızda</h4>
             </div>
             <div class="card-body">
                 <div class="table-responsive">
@@ -17,45 +18,31 @@
                            class="display table table-striped table-hover">
                         <thead>
                             <tr>
-                                <th>RecipeId</th>
-                                <th>RecipeImage</th>
-                                <th>Title</th>
+                                <th>AboutId</th>
                                 <th>Description</th>
-                                <th>CategoryName</th>
-                                <th>UserName</th>
+                                
                             </tr>
                         </thead>
                         <tfoot>
                             <tr>
-                                <th>RecipeId</th>
-                                <th>RecipeImage</th>
-                                <th>Title</th>
+                                <th>AboutId</th>
                                 <th>Description</th>
-                                <th>CategoryName</th>
-                                <th>UserName</th>
                             </tr>
                         </tfoot>
                         <tbody>
                             @foreach (var item in Model)
                             {
                                 <tr>
-                                    <td>@item.RecipeId</td>
-                                    <td>
-                                        <img src="@item.RecipeImageUrl" class="img-thumbnail" style="width: 100px; height: 100px; object-fit: cover;" />
-                                </td>
-                                    <td>@item.Title</td>
+                                    <td>@item.AboutId</td>
                                     <td>@item.Description</td>
-                                    <td>@item.CategoryName</td>
-                                    <td>@item.Username</td>
                                     <td>
-                                        <button class="btn btn-danger delete-button" data-url="/Admin/Recipe/RemoveRecipe/@item.RecipeId">
+                                        <button class="btn btn-danger delete-button" data-url="/Admin/About/RemoveAbout/@item.AboutId">
                                             Sil
                                         </button>
-                                        <button class="btn btn-warning update-button" data-url="/Admin/Recipe/UpdateRecipe/@item.RecipeId">
+                                        <button class="btn btn-warning update-button" data-url="/Admin/About/UpdateAbout/@item.AboutId">
                                             Güncelle
                                         </button>
                                     </td>
-
                                 </tr>
                             }
                         </tbody>
