--- a/Frontend/YemekWebUI/Areas/Admin/Views/User/Index.cshtml
+++ b/Frontend/YemekWebUI/Areas/Admin/Views/User/Index.cshtml
@@ -8,8 +8,12 @@
     <div class="col-md-12">
         <div class="card">
             <div class="card-header">
-                <h4 class="card-title">Tarifler</h4>
+                <h4 class="card-title">Kullanıcılar</h4>
+                
             </div>
+            <button class="btn btn-success update-button" data-url="/Admin/User/CreateUser">
+                Yeni Kullancı Ekle
+            </button>
             <div class="card-body">
                 <div class="table-responsive">
                     <table id="basic-datatables"
