--- a/Frontend/YemekWebUI/Areas/Admin/Views/User/Index.cshtml
+++ b/Frontend/YemekWebUI/Areas/Admin/Views/User/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model List<ResultAllUsersForAdminPageDto>
+﻿@* @model List<ResultAllUsersForAdminPageDto>
 @{
     ViewData["Title"] = "Index";
     Layout = "~/Areas/Admin/Views/AdminLayout/Index.cshtml";
@@ -71,3 +71,80 @@
     </div>
 </div>
 
+ *@
+
+@model List<ResultAllUsersForAdminPageDto>
+@{
+    ViewData["Title"] = "Index";
+    Layout = "~/Areas/Admin/Views/AdminLayout/Index.cshtml";
+}
+
+<div class="row">
+    <div class="col-md-12">
+        <div class="card">
+            <div class="card-header">
+                <h4 class="card-title">Kullanıcılar</h4>
+            </div>
+            <button class="btn btn-success update-button"
+                    data-url="@Url.Action("CreateUser", "User", new { area = "Admin" })">
+                Yeni Kullanıcı Ekle
+            </button>
+            <div class="card-body">
+                <div class="table-responsive">
+                    <table id="basic-datatables" class="display table table-striped table-hover">
+                        <thead>
+                            <tr>
+                                <th>UserId</th>
+                                <th>UserImage</th>
+                                <th>Name</th>
+                                <th>Surname</th>
+                                <th>Email</th>
+                                <th>Phone</th>
+                                <th>BirthDate</th>
+                                <th>Actions</th>
+                            </tr>
+                        </thead>
+                        <tfoot>
+                            <tr>
+                                <th>UserId</th>
+                                <th>UserImage</th>
+                                <th>Name</th>
+                                <th>Surname</th>
+                                <th>Email</th>
+                                <th>Phone</th>
+                                <th>BirthDate</th>
+                                <th>Actions</th>
+                            </tr>
+                        </tfoot>
+                        <tbody>
+                            @foreach (var item in Model)
+                            {
+                                <tr>
+                                    <td>@Html.DisplayFor(modelItem => item.UserId)</td>
+                                    <td>
+                                        <img src="@item.UserImageUrl" class="img-thumbnail"
+                                             style="width: 100px; height: 100px; object-fit: cover;" />
+                                    </td>
+                                    <td>@Html.DisplayFor(modelItem => item.Name)</td>
+                                    <td>@Html.DisplayFor(modelItem => item.Surname)</td>
+                                    <td>@Html.DisplayFor(modelItem => item.Email)</td>
+                                    <td>@Html.DisplayFor(modelItem => item.Phone)</td>
+                                    <td>@Html.DisplayFor(modelItem => item.BirthDate)</td>
+                                    <td>
+                                        <button class="btn btn-danger delete-button" data-url="/Admin/User/RemoveUser/@item.UserId">
+                                            Sil
+                                        </button>
+                                        <button class="btn btn-warning update-button" data-url="/Admin/User/UpdateUser/@item.UserId">
+                                            Güncelle
+                                        </button>
+                                    </td>
+
+                                </tr>
+                            }
+                        </tbody>
+                    </table>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
