--- a/Frontend/YemekWebUI/Areas/Admin/Views/User/Index.cshtml
+++ b/Frontend/YemekWebUI/Areas/Admin/Views/User/Index.cshtml
@@ -147,4 +147,17 @@
             </div>
         </div>
     </div>
+    <nav>
+        <ul class="pagination">
+            <li class="page-item @(ViewBag.CurrentPage == 1 ? "disabled" : "")">
+                <a class="page-link" href="?pageNumber=@(ViewBag.CurrentPage - 1)&pageSize=@ViewBag.PageSize">Önceki</a>
+            </li>
+            <li class="page-item">
+                <a class="page-link" href="?pageNumber=@ViewBag.CurrentPage&pageSize=@ViewBag.PageSize">@ViewBag.CurrentPage</a>
+            </li>
+            <li class="page-item">
+                <a class="page-link" href="?pageNumber=@(ViewBag.CurrentPage + 1)&pageSize=@ViewBag.PageSize">Sonraki</a>
+            </li>
+        </ul>
+    </nav>
 </div>
