--- a/Frontend/YemekWebUI/Views/UILayout/Index.cshtml
+++ b/Frontend/YemekWebUI/Views/UILayout/Index.cshtml
@@ -6,26 +6,26 @@
 <!DOCTYPE html>
 <html  lang="en">
 
-@await Component.InvokeAsync("_HeaderUILayoutComponentPartial");
+@await Component.InvokeAsync("_HeaderUILayoutComponentPartial")
 <body>
     <!-- header-start -->
-    @await Component.InvokeAsync("_HeadUILayoutComponentPartial");
+    @await Component.InvokeAsync("_HeadUILayoutComponentPartial")
     <!-- header-end -->
 
     <!-- slider_area_start -->
-    @await Component.InvokeAsync("_SliderUILayoutComponentPartial");
+    @await Component.InvokeAsync("_SliderUILayoutComponentPartial")
     <!-- slider_area_end -->
 
     @RenderBody()
 
-    @await Component.InvokeAsync("_DiscoverRecipesComponentPartial");
+    @await Component.InvokeAsync("_DiscoverRecipesComponentPartial")
 
     <!-- footer  -->
-    @await Component.InvokeAsync("_FooterUILayoutComponentPartial");
+    @await Component.InvokeAsync("_FooterUILayoutComponentPartial")
     <!--/ footer  -->
 
     <!-- JS here -->
-    @await Component.InvokeAsync("_ScriptsUILayoutComponentPartial");
+    @await Component.InvokeAsync("_ScriptsUILayoutComponentPartial")
 </body>
 
 </html>
